--- a/Lec_04/3_data_wrangling_1/README.Rmd
+++ b/Lec_04/3_data_wrangling_1/README.Rmd
@@ -8,7 +8,7 @@ output:
   md_document: default
 knit: (function(inputFile, encoding){rmarkdown::render(inputFile, encoding = encoding, output_format = "all", knit_root_dir = getwd())})
 editor_options: 
-  chunk_output_type: console
+  chunk_output_type: inline
 ---
 
 ```{r setup, include=FALSE}
@@ -168,6 +168,11 @@ d_gdp
 ### 3. Rename Columns to Make Names Informative
 
 ```{r}
+# d_gdp |>
+#   rename("GDP" = "e_gdp", "GDP_per_capita" = "e_gdppc",
+#          "Country" = "country_name", "ID" = "country_id",
+#          "Year" = "year")
+
 d_gdp <- d_gdp |>
   rename("GDP" = "e_gdp", "GDP_per_capita" = "e_gdppc",
          "Country" = "country_name", "ID" = "country_id",
@@ -222,7 +227,7 @@ d_gdp |> filter(Year >= 2000 & Year <= 2005)
 We may subset observations whose `Country` variable, a `character` variable, equals to the text `"China"`.
 
 ```{r}
-d_gdp |> filter(Country == "China")
+d_gdp_china <- d_gdp |> filter(Country == "China")
 ```
 
 We may also stack multiple `filter` functions. For example, you may do the following if you want to look at a subset of the data whose `Year` ranges from 2000 to 2005 and `Country` equals to `"China"`:
@@ -247,6 +252,8 @@ Want the countries-years with larger values of `GDP_per_capita` appear first? Si
 
 ```{r}
 d_gdp |> arrange(-GDP_per_capita)
+
+d_gdp |> arrange(desc(GDP_per_capita))
 ```
 
 ### 7. Perform (4) (5) (6) group by group: `group_by`, `ungroup`
@@ -259,10 +266,48 @@ d_gdp |> arrange(-GDP_per_capita)
     2.  Magnitude of growth from 1984 to 2022.
 
 ```{r}
-# INSERT CODE HERE
+# Want: For each country, we want the year with the highest GDP
+d_gdp |>
+  group_by(Country) |>
+  slice_max(GDP, n = 1)
+```
+
+```{r}
+# How many entries are there for each country
+d_gdp |>
+  group_by(Country) |>
+  count()
+?count
+```
+
+```         
+```
+
+```{r}
+# Want: For each country, get the year when it has worst GDP
+d_gdp |>
+  group_by(Country) |>
+  slice_min(order_by = GDP, n = 1)
 ```
 
 ### 8. Create new columns in the data: `group_by`, `mutate`, `ungroup`
+
+```{r}
+d_gdp |> mutate(New = 1)
+
+d_gdp |> mutate(New = GDP)
+
+d_gdp |> mutate(New = log(GDP))
+d_gdp |> mutate(New = log(GDP) + 1)
+
+# Want: New column to be GDP relative to average GDP in the world 1984-2022
+d_gdp |> mutate(GDP_over_avg = GDP / mean(GDP, na.rm = TRUE))
+
+# Want: New column to be GDP relative to average GDP of the country in the world 1984-2022
+d_gdp |> 
+  group_by(Country) |>
+  mutate(GDP_over_avg = GDP / mean(GDP, na.rm = TRUE))
+```
 
 **Task:** Add the following economic indicators to the data:
 
@@ -271,10 +316,41 @@ d_gdp |> arrange(-GDP_per_capita)
 2.  Year-on-year economic growth.
 
 ```{r}
-# INSERT CODE HERE
+# Country-year development level with reference to that of 1984.
+d_gdp |>
+  group_by(Country) |>
+  arrange(Year) |>
+  mutate(GDP_over_1984 = GDP / first(GDP)) |>
+  ungroup() |>
+  arrange(Country, Year)
+
+# first()
+```
+
+```{r}
+# Country-year development level with reference to that of 1984.
+d_gdp
+```
+
+```{r}
+# Year-on-year economic growth.
+# ?lag
+
+d_gdp |>
+  group_by(Country) |>
+  arrange(Year) |>
+  mutate(GDP_yoy_change = GDP - lag(GDP, n = 1)) |>
+  ungroup() |>
+  arrange(Country, Year)
 ```
 
 ### 9. Summarize the data: `group_by`, `summarise`, `ungroup`
+
+```{r}
+# Want: Average GDP level of the world
+d_gdp |> summarise(gdp_average = mean(GDP, na.rm = TRUE),
+                   gdp_per_capita_average = mean(GDP_per_capita, na.rm = TRUE))
+```
 
 **Task:** Perform a data availability/ integrity check. Then aggregate the data into a new country-level dataset which contains the following indicators:
 
@@ -283,7 +359,36 @@ d_gdp |> arrange(-GDP_per_capita)
 2.  Magnitude of growth from 1984 to 2022.
 
 ```{r}
-# INSERT CODE HERE
+# Data availability/ integrity check
+d_gdp |>
+  # Create a column that indicates whether the value is missing
+  mutate(GDP_missing = as.numeric(is.na(GDP)), .after = GDP) |>
+  group_by(Country) |>
+  summarise(N_GDP_missing = sum(GDP_missing))
+
+# ?as.numeric
+
+```
+
+```{r}
+# Average development level
+d_gdp |>
+  group_by(Country) |>
+  summarise(GDP_average = mean(GDP, na.rm = TRUE),
+            GDPpc_average = mean(GDP_per_capita, na.rm = TRUE))
+
+```
+
+```{r}
+# GDP growth and GDP per capita growth: comparing 2019 with 1984
+d_gdp |>
+  filter(Year >= 1984 & Year <= 2019) |>
+  group_by(Country) |>
+  arrange(Year) |>
+  summarise(GDP_growth_2019_1984 = (last(GDP) - first(GDP)) / first(GDP),
+            GDPpc_growth_2019_1984 = (last(GDP_per_capita) - first(GDP_per_capita)) / first(GDP_per_capita)) |>
+  ungroup() |>
+  arrange(Country)
 ```
 
 ## Final Notes
