--- a/Lec_06/1_troubleshooting_HowTo/README.Rmd
+++ b/Lec_06/1_troubleshooting_HowTo/README.Rmd
@@ -231,7 +231,7 @@ ggplot(mtcars, aes(x = mpg)) +
 
 ## One more thing...
 
-These slides are written with Rmarkdown.
+These slides are made with Rmarkdown.
 
 -   Check out my code on our course Github repo. Play with it.
 
