--- a/Lec_06/2_data_wrangling_3/README.Rmd
+++ b/Lec_06/2_data_wrangling_3/README.Rmd
@@ -322,10 +322,10 @@ If the identifiers have different names, you have two options
 \scriptsize
 
 ```{r}
-# This is an artificial example whose variable name of a matching identifier 
-# is different from d_gdp_2020_2022
 d_gdppc_1984_2010_t <- d_gdppc_1984_2010 |> 
   rename("country_id" = "country_text_id")
+# Above, I make an artificial example whose variable name of a matching 
+# identifier is different from d_gdp_2020_2022.
 ```
 
 ```{r}
