--- a/Lec_06/2_data_wrangling_3/README.Rmd
+++ b/Lec_06/2_data_wrangling_3/README.Rmd
@@ -313,17 +313,13 @@ unique(d_aj$year) |> sort()
 
 ## Join by Identifiers with Different Variable Names
 
-If the identifiers have different names, you have two options
-
--   Rename it beforehand
-
--   Specify the `by =` part differently.
+If the identifiers have different names, you have two options: (1) Rename it beforehand, (2) specify the `by =` argument differently.
 
 \scriptsize
 
 ```{r}
-#Above, I make an artificial example whose variable name of a matching 
-#identifier is different from d_gdp_2020_2022.
+# I make an artificial example whose variable name of a matching 
+# identifier is different from d_gdp_2020_2022.
 d_gdppc_1984_2010_t <- d_gdppc_1984_2010 |> 
   rename("country_id" = "country_text_id")
 ```
