--- a/Lec_06/2_data_wrangling_3/README.Rmd
+++ b/Lec_06/2_data_wrangling_3/README.Rmd
@@ -166,6 +166,11 @@ d_fh |> print(n = 2)
 d_gdp_1945_2022 <- bind_rows(d_gdp, d_gdp_1945)
 d_gdp_1945_2022 |> print(n = 3)
 unique(d_gdp_1945_2022$year) |> sort()
+
+d_gdp_1945_2022_ue_rows <- bind_rows(
+ d_gdp |> select(-gdppc),
+ d_gdp_1945 |> select(-gdp)
+)
 ```
 
 ## `bind_rows`
@@ -202,25 +207,25 @@ names(d_gdp_edu_fh)
 
 Understand the behavior of different `join_` functions
 
--   `left_join`: Merge and only keep observations that appear in the left-hand-side table.
+-   `left_join`: Merge and only keep observations whose identifiers (matching keys) appear in the left-hand-side table.
 
--   `right_join`: Merge and only keep observations that appear in the right-hand-side table.
+-   `right_join`: Merge and only keep observations whose identifiers (matching keys) appear in the right-hand-side table.
 
--   `inner_join`: Merge and only keep observations that appear in both tables.
+-   `inner_join`: Merge and only keep observations whose identifiers (matching keys) appear in both tables.
 
--   `full_join`: Merge and keep observations that appear either table.
+-   `full_join`: Merge and keep observations whose identifiers (matching keys) appear either table.
 
--   `anti_join`: Filter out observations that does appears in the right-hand-side table
+-   `anti_join`: Filter out observations whose identifiers (matching keys) appear in the right-hand-side table
 
--   `semi_join`: Filter out observations that does not appear in the right-hand-side table
+-   `semi_join`: Filter out observations whose identifiers (matching keys) do not appear in the right-hand-side table
 
 ## Task 1: The Case
 
 Join two datasets from the V-Dem data using the above different `join_` functions
 
--   *GDP* data from 2000-2022
+-   *GDP* data from **2000-2022**
 
--   *GDP per capita* data from 1984 to 2010
+-   *GDP per capita* data from **1984 to 2010**
 
 ## Task 1: Setup
 
@@ -444,7 +449,7 @@ d_fj_habit_2 |> print(n = 3)
 
 ## Saving Your Outputs after Data Wrangling
 
-You can save your clean data in a variety of formats. I will highlight two most popular options
+You can save your clean data in a variety of formats. I will highlight two most popular options.
 
 -   `.csv` "comma-separated values," readable by Excel or a text editor
 
@@ -480,21 +485,21 @@ Comparing the two output types
 
 \footnotesize
 
-+---------+----------------------------------------------------------+------------------------------------------------------------------------------------------+
-| Type    | Pro                                                      | Con                                                                                      |
-+=========+==========================================================+==========================================================================================+
-| `.csv`  | -   Readable outside R                                   | -   Variable types may change when you read it back if you do not carefully specify them |
-|         |                                                          |                                                                                          |
-|         | -   Conveniently convertible to Excel files              | -   Error-prone with *text* data (encoding, line breaks etc.)                            |
-|         |                                                          |                                                                                          |
-|         |                                                          | -   (Maybe) takes longer to read                                                         |
-+---------+----------------------------------------------------------+------------------------------------------------------------------------------------------+
-| `.rds`  | -   **Replicable**: Get precisely how the data are saved | -   Can't read `.rds` outside R                                                          |
-|         |                                                          |                                                                                          |
-|         | -   Smaller files (if stick with default compression)    |                                                                                          |
-|         |                                                          |                                                                                          |
-|         | -   (Sometimes) faster read/write                        |                                                                                          |
-+---------+----------------------------------------------------------+------------------------------------------------------------------------------------------+
++--------+----------------------------------------------------------+------------------------------------------------------------------------------------------+
+| Type   | Pro                                                      | Con                                                                                      |
++========+==========================================================+==========================================================================================+
+| `.csv` | -   Readable outside R                                   | -   Variable types may change when you read it back if you do not carefully specify them |
+|        |                                                          |                                                                                          |
+|        | -   Conveniently convertible to Excel files              | -   Error-prone with *text* data (encoding, line breaks etc.)                            |
+|        |                                                          |                                                                                          |
+|        |                                                          | -   (Maybe) takes longer to read                                                         |
++--------+----------------------------------------------------------+------------------------------------------------------------------------------------------+
+| `.rds` | -   **Replicable**: Get precisely how the data are saved | -   Can't read `.rds` outside R                                                          |
+|        |                                                          |                                                                                          |
+|        | -   Smaller files (if stick with default compression)    |                                                                                          |
+|        |                                                          |                                                                                          |
+|        | -   (Sometimes) faster read/write                        |                                                                                          |
++--------+----------------------------------------------------------+------------------------------------------------------------------------------------------+
 
 ## Saving Your Outputs after Data Wrangling
 
